[tool.poetry]
name = "archives-scripts"
version = "0.1.0"
description = "Skrypty do prac archiwum Instytutu Piłsudskiego"
authors = ["klinga <klingaroo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-mock = "^3.3.1"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
